src/snapshots/fastexpr_rs__lexer__tests__arithmetic_operators.snap
---
source: src/lexer.rs
expression: "lex(\"+ - * / ** %\")"
---
Ok(
    [
        Plus,
        Minus,
        Star,
        Slash,
        StarStar,
        Percent,
        Eof,
    ],
)
