src/snapshots/fastexpr_rs__lexer__tests__assignment_operators.snap
---
source: src/lexer.rs
expression: "lex(\"= += -= *= /= %= **=\")"
---
Ok(
    [
        Eq,
        PlusEq,
        MinusEq,
        StarEq,
        SlashEq,
        PercentEq,
        StarStarEq,
        Eof,
    ],
)
