src/snapshots/fastexpr_rs__lexer__tests__bitwise_operators.snap
---
source: src/lexer.rs
expression: "lex(\"~ & | ^ << >> >>>\")"
---
Ok(
    [
        Tilde,
        And,
        Pipe,
        Caret,
        LtLt,
        GtGt,
        GtGtGt,
        Eof,
    ],
)
