src/snapshots/fastexpr_rs__lexer__tests__comparison_operators.snap
---
source: src/lexer.rs
expression: "lex(\"== === != !== < > <= >=\")"
---
Ok(
    [
        EqEq,
        EqEqEq,
        NotEq,
        NotEqEq,
        Lt,
        Gt,
        LtEq,
        GtEq,
        Eof,
    ],
)
