src/snapshots/fastexpr_rs__lexer__tests__hexadecimal_numbers.snap
---
source: src/lexer.rs
expression: "lex(\"0x0 0x1 0XFfFF -0xFFFF +0xAaAA 0x123n\")"
---
Ok(
    [
        Number(
            0.0,
        ),
        Number(
            1.0,
        ),
        Number(
            65535.0,
        ),
        Minus,
        Number(
            65535.0,
        ),
        Plus,
        Number(
            43690.0,
        ),
        BigInt(
            291,
        ),
        Eof,
    ],
)
