src/snapshots/fastexpr_rs__lexer__tests__line_comments.snap
---
source: src/lexer.rs
expression: "lex(\"// foo\\n42 // bar\\r// baz qux\")"
---
Ok(
    [
        Number(
            42.0,
        ),
        Eof,
    ],
)
