src/snapshots/fastexpr_rs__lexer__tests__logical_operators.snap
---
source: src/lexer.rs
expression: "lex(\"&& ||\")"
---
Ok(
    [
        AndAnd,
        PipePipe,
        Eof,
    ],
)
