src/snapshots/fastexpr_rs__lexer__tests__long_strings.snap
---
source: src/lexer.rs
expression: "lex(\"'abc \\\\\\n def'\")"
---
Ok(
    [
        String(
            "abc  def",
        ),
        Eof,
    ],
)
